--- a/react-native/package.json
+++ b/react-native/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.8.2",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.2",
@@ -21,6 +22,7 @@
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-image-picker": "^8.2.1",
+    "react-native-maps": "^1.26.20",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
